# rush

./: .clang-format  .clangd  CMakeLists.txt  Cargo.toml  README.md  build.zig  build.zig.zon
.zig-cache/o/188109e07b7cb51d3fc5ecd97aeb3942/: test
.zig-cache/o/362d82b9bacc914fc7c991602831f8c8/: flash
.zig-cache/o/61058ffcb86eed7b0eee3e39ba74ee4f/: flash
.zig-cache/o/b4da0091a66eab76f352659933d84128/: flash
.zig-cache/o/e30bd3ab1eb0205000d80ba040f0c76b/: flash
include/: shell.h
include/interpreter/: lexer.h
src/: flash.zig  main.c  main.rs  main.zig  shell.c  shell.rs  terminal.rs
src/engine/: lexer.zig  parser.zig  types.zig
src/interpreter/: lexer.c
src/run/: bic.rs
src/run/executor/: command.rs
src/run/parser/: command.rs
